--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-datepicker": "4.4.2",
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
+    "react-datepicker": "4.8.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
