--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,12 +4,7 @@ twilio.phone.from=${TWILIO_PHONE_FROM}
 twilio.phone.to=${TWILIO_PHONE_TO}
 
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.profiles.active=${APP_PROFILE:test}
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.open-in-view=false
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
